Drop down reconfigured as form but still commented out cause not working

--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -125,7 +125,21 @@
 
                 </div>
 
-                <p><br></p>
+{#                <select id="dLanguages" name = "language">#}
+{#                    <option value="%">Language</option>#}
+{#                    {% for entry in languages %}#}
+{#                        <option value="{{ entry.title }}">{{ entry.tags.name }}</option>#}
+{#                    {% endfor %}#}
+{#                </select>#}
+{##}
+{#                <select id="dDifficulty" name = "difficulty" >#}
+{#                    <option value="%">Difficulty</option>#}
+{#                    {% for entry in difficulty %}#}
+{#                        <option value="{{ entry.id }}">{{ entry.name }}</option>#}
+{#                    {% endfor %}#}
+{#                </select>#}
+{##}
+
 
                 {#  SEARCH BAR  #}
 {#                <div class="search" align="center">#}
