Fixed CSSS - busy coding search thing which is hard

--- a/ProblemFinder/templates/problemfinder/search.html
+++ b/ProblemFinder/templates/problemfinder/search.html
@@ -151,7 +151,7 @@
     <div class="container">
         <p><br></p>
         <h3>Search Results</h3>
-        <div>You searched for: {{ query }} </div>
+        <div>You searched for: {{ q }} </div>
 
         {%  block content %}
 
