--- a/ProblemFinder/static/problemfinder/css/custom.css
+++ b/ProblemFinder/static/problemfinder/css/custom.css
@@ -87,7 +87,6 @@ form {
 }
 .search {
                 padding:8px 15px;
-                background:rgba(50, 50, 50, 0.2);
                 border:0px solid #dbdbdb;
 }
 .button {
@@ -105,3 +104,9 @@ form {
 
 
 
+
+.input-medium {
+
+    color:black
+
+}
