--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -119,8 +119,8 @@
                         <li><a href="#">Python</a></li>
                         <li><a href="#">Java</a></li>
                         <li><a href="#">C#</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">Add new language...</a></li>
+{#                        <li class="divider"></li>#}
+{#                        <li><a href="#">Add new language...</a></li>#}
                     </ul>
 
                 </div>
@@ -151,12 +151,11 @@
 {#                        </span>#}
 {#                        </div>#}
 {#                    </form>#}
-{##}
 {#                </div>#}
 
 
                 <form method="get" action="search" >
-                    <input type="text" id="searchBox" class="input-medium search-query" name="q" placeholder="Search">
+                    <input type="text" id="searchBox" class="input-medium" name="q" placeholder="Search">
                     <input type="submit" class="btn" value="Search" >
                 </form>
 
