--- a/ProblemFinder/static/problemfinder/css/custom.css
+++ b/ProblemFinder/static/problemfinder/css/custom.css
@@ -102,11 +102,10 @@ form {
                 color:#207cca;
 }
 
-
-
-
 .input-medium {
-
     color:black
+}
 
+.searchTitle{
+    color: white;
 }
