Search bar in search.html

--- a/ProblemFinder/templates/problemfinder/search.html
+++ b/ProblemFinder/templates/problemfinder/search.html
@@ -126,14 +126,10 @@
                 
                 <p><br></p>
 
-                <div class="search" align="center">
-                    <div class="input-group" align="center">
-                        <input type="text" class="form-control" placeholder="search keyword(s) here">
-                        <span class="input-group-btn">
-                            <button class="btn btn-default" type="button">Go!</button>
-                        </span>
-                    </div>
-                </div>
+               <form method="get" action="search" >
+                    <input type="text" id="searchBox" class="input-medium" name="q" placeholder="Search">
+                    <input type="submit" class="btn" value="Search" >
+                </form>
 
                 <p><br></p>
 
