Search bar in search.html

--- a/ProblemFinder/templates/problemfinder/search.html
+++ b/ProblemFinder/templates/problemfinder/search.html
@@ -147,7 +147,7 @@
     <div class="container">
         <p><br></p>
         <h3 class="searchTitle">Search Results</h3>
-        <div class="searchTitle">You searched for: {{ q }} <p><br></p></div>
+        <p style="font-size:18px !important;" class="searchTitle">You searched for: {{ query }} <p><br></p></p>
 
         {%  block content %}
 
