Fixed CSSS - busy coding search thing which is hard

--- a/ProblemFinder/static/problemfinder/css/custom.css
+++ b/ProblemFinder/static/problemfinder/css/custom.css
@@ -105,6 +105,14 @@ form {
 .input-medium {
     color:black;
     position:relative;
+    width: 130px;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+
+}
+
+.input-medium:focus {
+width: 80%;
 
 }
 
