--- a/ProblemFinder/static/problemfinder/css/custom.css
+++ b/ProblemFinder/static/problemfinder/css/custom.css
@@ -81,30 +81,11 @@ header .intro-text .name{
 
 
 
-form {
-                width:500px;
-                margin:50px auto;
-}
-.search {
-                padding:8px 15px;
-                border:0px solid #dbdbdb;
-}
-.button {
-                position:relative;
-                padding:6px 15px;
-                left:-8px;
-                border:2px solid #207cca;
-                background-color:#207cca;
-                color:#fafafa;
-}
-.button:hover  {
-                background-color:#fafafa;
-                color:#207cca;
-}
-
 .input-medium {
     color:black;
     position:relative;
+    margin: 100px auto;
+    height: 33px;
     width: 130px;
     -webkit-transition: width 0.4s ease-in-out;
     transition: width 0.4s ease-in-out;
@@ -112,8 +93,7 @@ form {
 }
 
 .input-medium:focus {
-width: 80%;
-
+    width: 80%;
 }
 
 .searchTitle{
