--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -155,7 +155,7 @@
 
 
                 <form method="get" action="search" >
-                    <input type="text" id="searchBox" class="input-medium" name="q" placeholder="Search">
+                    <input type="text" id="searchBox" class="input-medium" name="q" placeholder="Search...">
                     <input type="submit" class="btn" value="Search" >
                 </form>
 
