--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -155,11 +155,12 @@
 
 
                 <form method="get" action="search" >
-                    <input type="text" id="searchBox" class="input-medium" name="q" placeholder="Search...">
+                    <input type="text" id="searchBox" class="input-medium" name="q" placeholder="Search..." required>
                     <input type="submit" class="btn" value="Search" >
                 </form>
 
                 <p><br></p>
+
 
 
                 {# ADD NEW QUESTION BUTTON #}
