--- a/ProblemFinder/templates/problemfinder/search.html
+++ b/ProblemFinder/templates/problemfinder/search.html
@@ -154,7 +154,7 @@
 
 
                <form method="get" action="search" >
-                    <input type="text" id="searchBox" class="input-medium" name="q" placeholder="Search...">
+                    <input type="text" id="searchBox" class="input-medium" name="q" placeholder="Search..." required>
                     <input type="submit" class="btn" value="Search" >
                 </form>
 
