Search title works for no imput (returns all)

--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -165,7 +165,7 @@
 
                 {# ADD NEW QUESTION BUTTON #}
                 <button type="button" class="btn btn-primary" href="search.html">
-                    <a href="search">ADD TO LIST</a>
+                    <a href="search">Show All Questions</a>
                 </button>
 
 
