--- a/ProblemFinder/templates/problemfinder/search.html
+++ b/ProblemFinder/templates/problemfinder/search.html
@@ -161,7 +161,7 @@
                 <p><br></p>
 
                 <button type="button" class="btn btn-primary" href="search.html">
-                    <a href="search">ADD TO LIST</a>
+                    <a href="search">Show All Questions</a>
                 </button>
 
             </div>
