--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -163,10 +163,12 @@
 
 
 
+
                 {# ADD NEW QUESTION BUTTON #}
-                <button type="button" class="btn btn-primary" href="search.html">
+                <button type="button" onclick="scrollWin()" class="btn btn-primary" href="search.html">
                     <a href="search">Show All Questions</a>
                 </button>
+
 
 
             </div>
