--- a/ProblemFinder/templates/problemfinder/search.html
+++ b/ProblemFinder/templates/problemfinder/search.html
@@ -223,7 +223,7 @@
     </div>
 </section>
 
-<!-- Footer -->
+<!-- Footer --
 <footer class="text-center">
     <div class="footer-above">
         <div class="container">
