--- a/ProblemFinder/templates/problemfinder/search.html
+++ b/ProblemFinder/templates/problemfinder/search.html
@@ -197,7 +197,7 @@
                     <p></p>
                     <div class="answerRow">
                      <h5>{{ question.title }}</h5>
-                    <p style="text-align:left;float:right;">{{ question.tags }}</p>
+                    <p class="tagDisplay" style="text-align:left;float:right;">{{ question.tags }}</p>
 
                     {% if question.question_URL %}
                         <a target="_blank" href="{{ question.question_URL }}">{{ question.question_URL }} </a>
