--- a/ProblemFinder/templates/problemfinder/search.html
+++ b/ProblemFinder/templates/problemfinder/search.html
@@ -103,34 +103,48 @@
                 {#  DROPDOWNS  #}
                 <!-- Difficulty dropdown menu -->
 
-                <div class="dropdown">
-                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1"
-                            data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
-                        Difficulty
-                        <span class="caret"></span></button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                        <li><a href="#">Easy</a></li>
-                        <li><a href="#">Moderate</a></li>
-                        <li><a href="#">Hard</a></li>
-                        <li><a href="#">Kamikaze</a></li>
-                    </ul>
+{#                <div class="dropdown">#}
+{#                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1"#}
+{#                            data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">#}
+{#                        Difficulty#}
+{#                        <span class="caret"></span></button>#}
+{#                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">#}
+{#                        <li><a href="#">Easy</a></li>#}
+{#                        <li><a href="#">Moderate</a></li>#}
+{#                        <li><a href="#">Hard</a></li>#}
+{#                        <li><a href="#">Kamikaze</a></li>#}
+{#                    </ul>#}
+{#                </div>#}
+{##}
+{#                <!-- Language choice dropdown menu -->#}
+{##}
+{#                <div class="dropdown">#}
+{#                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu3"#}
+{#                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">#}
+{#                        Language#}
+{#                        <span class="caret"></span></button>#}
+{#                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu3">#}
+{#                        <li><a href="#">Python</a></li>#}
+{#                        <li><a href="#">Java</a></li>#}
+{#                        <li><a href="#">C#</a></li>#}
+{#                        <li class="divider"></li>#}
+{#                        <li><a href="#">Add new language...</a></li>#}
+{#                    </ul>#}
                 </div>
 
-                <!-- Language choice dropdown menu -->
+                 <select id="dLanguages" name = "language">
+                    <option value="%">Language</option>
+                    {% for entry in languages %}
+                        <option value="{{ entry }}">{{ entry }}</option>
+                    {% endfor %}
+                </select>
 
-                <div class="dropdown">
-                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu3"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                        Language
-                        <span class="caret"></span></button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu3">
-                        <li><a href="#">Python</a></li>
-                        <li><a href="#">Java</a></li>
-                        <li><a href="#">C#</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">Add new language...</a></li>
-                    </ul>
-                </div>
+                <select id="dDifficulty" name = "difficulty" >
+                    <option value="%">Difficulty</option>
+                    {% for entry in difficulty %}
+                        <option value="{{ entry }}">{{ entry }}</option>
+                    {% endfor %}
+                </select>
                 {#                <select id="dLanguages" name = "language">#}
 {#                    <option value="%">Language</option>#}
 {#                    {% for entry in languages %}#}
