--- a/ProblemFinder/templates/problemfinder/search.html
+++ b/ProblemFinder/templates/problemfinder/search.html
@@ -219,7 +219,7 @@
                     {% endif %}
 
                     {% if question.question_PDF %}
-                        <a target="_blank" href="{{ question.question_PDF }}pdf fuck">{{ question.question_PDF }} </a>
+                        <a target="_blank" href="{{ question.question_PDF }}">{{ question.question_PDF }} </a>
                         <p>{{ question.question_text }}</p>
                     {% endif %}
 
