--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -208,7 +208,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    Copyright &copy; UCT Finding Problems 2016
+                    <h3><span style="color: #18BC9C">Developed by the Djangonauts</span></h3>
                 </div>
             </div>
         </div>
