--- a/ProblemFinder/templates/problemfinder/search.html
+++ b/ProblemFinder/templates/problemfinder/search.html
@@ -224,7 +224,7 @@
     </div>
 </section>
 
-<!-- Footer --
+<!-- Footer -->
 <footer class="text-center">
     <div class="footer-above">
         <div class="container">
@@ -248,16 +248,17 @@
             </div>
         </div>
     </div>
+
+
     <div class="footer-below">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    Copyright &copy; UCT Finding Problems 2016
+                    <h3><span style="color: #18BC9C">Developed by the Djangonauts</span></h3>
                 </div>
             </div>
         </div>
     </div>
-</footer>
 
 
 <!-- jQuery -->
