--- a/ProblemFinder/templates/problemfinder/search.html
+++ b/ProblemFinder/templates/problemfinder/search.html
@@ -202,7 +202,12 @@
                     <p></p>
                     <div class="answerRow">
                      <h5>{{ question.title }}</h5>
-                    <p class="tagDisplay" style="text-align:left;float:right;">{{ question.tags.all }}</p>
+                    <p class="tagDisplay" style="text-align:left;float:right;">
+                        {% for tag in question.tags.all %}
+                            {{ tag }}\n
+                        {% endfor %}
+                            </p>
+
 
                     {% if question.question_URL %}
                         <a target="_blank" href="{{ question.question_URL }}">{{ question.question_URL }} </a>
