Added selected language to search page

--- a/ProblemFinder/templates/problemfinder/search.html
+++ b/ProblemFinder/templates/problemfinder/search.html
@@ -188,7 +188,9 @@
     <div class="container">
         <p><br></p>
         <h3 class="searchTitle">Search Results</h3>
-        <p style="font-size:18px !important;" class="searchTitle">You searched for: {{ query }} <p><br></p></p>
+        <p style="font-size:18px !important;" class="searchTitle">You searched for: {{ query }} </p>
+        <p style="font-size:18px !important;" class="searchTitle">Difficulty Selected: {{ languagesel }} <p><br></p></p>
+
 
         {%  block content %}
 
