Corrected difficulty thing

--- a/ProblemFinder/templates/problemfinder/search.html
+++ b/ProblemFinder/templates/problemfinder/search.html
@@ -192,7 +192,7 @@
         <p><br></p>
         <h3 class="searchTitle">Search Results</h3>
         <p style="font-size:18px !important;" class="searchTitle">You searched for: {{ query }} </p>
-        <p style="font-size:18px !important;" class="searchTitle">Difficulty Selected: {{ languagesel }} <p><br></p></p>
+        <p style="font-size:18px !important;" class="searchTitle">Difficulty Selected: {{ difft }} <p><br></p></p>
 
 
         {%  block content %}
