--- a/ProblemFinder/static/problemfinder/css/custom.css
+++ b/ProblemFinder/static/problemfinder/css/custom.css
@@ -102,7 +102,18 @@ header .intro-text .name{
 .tagDisplay{
     border: 2px solid gold;
     border-radius: 5px;
-    padding: 5px
-
+    padding: 5px;
+    float: right;
 }
+
+/* Display lang in box*/
+.langDisplay{
+    border: 2px solid green;
+    border-radius: 5px;
+    padding: 5px;
+    float: right;
+}
+
+
+
 
