--- a/ProblemFinder/templates/problemfinder/search.html
+++ b/ProblemFinder/templates/problemfinder/search.html
@@ -237,7 +237,7 @@
     </div>
 </section>
 
-<!-- Footer -->
+<!-- Footr -->
 <footer class="text-center">
     <div class="footer-above">
         <div class="container">
