--- a/ProblemFinder/templates/problemfinder/search.html
+++ b/ProblemFinder/templates/problemfinder/search.html
@@ -199,7 +199,7 @@
 
                 {% if not question_list %}
                     <div class="answerRow">
-                     <h5>Unfortunately no questions were found for you search criteria :(</h5>
+                     <h5>Unfortunately no questions were found for your search criteria :(</h5>
                     </div>
                 {% endif %}
 
