--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -157,7 +157,7 @@
                 </select>
 
                     <p><br></p>
-                    <input type="text" id="searchBox"  class="input-medium" name="q" placeholder="Search..." required>
+                    <input type="text" id="searchBox"  class="input-medium" name="q" placeholder="Search..." >
                     <input type="submit" class="btn" value="Search" >
                 </form>
 
