--- a/ProblemFinder/templates/problemfinder/search.html
+++ b/ProblemFinder/templates/problemfinder/search.html
@@ -170,7 +170,7 @@
                 </select>
                                <p><br></p>
 
-                    <input type="text" id="searchBox" class="input-medium" name="q" placeholder="Search..." required>
+                    <input type="text" id="searchBox" class="input-medium" name="q" placeholder="Search..." >
                     <input type="submit" class="btn" value="Search" >
                 </form>
 
