Changed the HTML for the drop downs to avoid it breaking

--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -142,15 +142,16 @@
 
 
                 <form method="get" action="search" >
+                LANGUAGE:
                        <select id="dLanguages" name = "language" required>
-                    <option value="%">Language</option>
+
                     {% for entry in languages %}
                         <option value="{{ entry }}">{{ entry }}</option>
                     {% endfor %}
                 </select>
+                    DIFFICULTY:
+                <select required id="dDifficulty" name = "difficulty" >
 
-                <select id="dDifficulty" name = "difficulty" required>
-                    <option value="%">Difficulty</option>
                     {% for entry in difficulty %}
                         <option value="{{ entry }}">{{ entry }}</option>
                     {% endfor %}
