--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -144,6 +144,7 @@
                 <form method="get" action="search" >
                 LANGUAGE:
                        <select id="dLanguages" name = "language" required>
+<option selected="selected" disabled="disabled">Select a Language</option>
 
                     {% for entry in languages %}
                         <option value="{{ entry }}">{{ entry }}</option>
@@ -151,6 +152,7 @@
                 </select>
                     DIFFICULTY:
                 <select required id="dDifficulty" name = "difficulty" >
+<option selected="selected" disabled="disabled">Select a Difficulty</option>
 
                     {% for entry in difficulty %}
                         <option value="{{ entry }}">{{ entry }}</option>
