--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -35,17 +35,6 @@
 
 <body id="page-top" class="index">
 
-<!-- PYTHON - Add later in correct area -->
-{#    this is all me showing what django does#}
-{#    {% if question_list %}#}
-{#    <ul>#}
-{#    {% for question in question_list %}#}
-{#        <li><a href="/polls/{{ question.id }}/">{{ question.question_text }}</a></li>#}
-{#    {% endfor %}#}
-{#    </ul>#}
-{#    {% else %}#}
-{#        <p>No polls are available.</p>#}
-{#    {% endif %}#}
 
 <!-- Navigation -->
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
@@ -56,7 +45,7 @@
                     data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand" href="/FPServer">Finding Problems</a>
+            <a class="navbar-brand" href="/">Finding Problems</a>
         </div>
         {#   <a class="bottom-right pull-right" href="/admin/">Login</a> #}
 
@@ -116,7 +105,6 @@
                 </form>
 
                 <p><br></p>
-
 
 
                 {# ADD NEW QUESTION BUTTON #}
