--- a/ProblemFinder/templates/problemfinder/search.html
+++ b/ProblemFinder/templates/problemfinder/search.html
@@ -222,7 +222,7 @@
                 <div class="footer-col col-md-4">
 
                     {#  Add footer content#}
-                    <a href="#top" class="btn btn-primary btn-lg " role="button" >Hide Results</a>
+                    <a href="/" class="btn btn-primary btn-lg " role="button" >Hide Results</a>
 
                 </div>
                 <div class="footer-col col-md-4">
