Doing a Solution view. Copied some of the HTML stufffs. Kiinda works. Parsing question.id successfully.  --Jayan Smart

--- a/ProblemFinder/templates/problemfinder/search.html
+++ b/ProblemFinder/templates/problemfinder/search.html
@@ -202,6 +202,9 @@
                                 {% endif %}
 
                                 <p><br></p>
+                                <button type="button" class="btn btn-primary" href="search.html">
+                                    <a href="/search/{{ question.id }}/">Solution</a>
+                                </button>
                             </div>
                     </div>
                 {%  endfor %}
