--- a/ProblemFinder/templates/problemfinder/login.html
+++ b/ProblemFinder/templates/problemfinder/login.html
@@ -5,32 +5,34 @@
     <meta charset="UTF-8">
     <title>Login</title>
 
-         <link rel="stylesheet" type="text/css" href="{% static 'problemfinder/css/custom.css' %}"/>
+         <link rel="stylesheet" type="text/css" href="{% static 'problemfinder/css/style.css' %}"/>
 
   </head>
 
   <body>
 
-    <div class="login-page">
-  <div class="form">
-    <form class="register-form">
-      <input type="text" placeholder="name"/>
-      <input type="password" placeholder="password"/>
-      <input type="text" placeholder="email address"/>
-      <button>create</button>
-      <p class="message">Already registered? <a href="#">Sign In</a></p>
-    </form>
-    <form class="login-form">
-      <input type="text" placeholder="username"/>
-      <input type="password" placeholder="password"/>
-      <button>login</button>
-      <p class="message">Not registered? <a href="#">Create an account</a></p>
-    </form>
-  </div>
-</div>
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
-        <script src="js/index.js"></script>
+  {% block content %}
+            <div class="login-page">
+          <div class="form">
+            <form class="register-form">
+              <input type="text" placeholder="name"/>
+              <input type="password" placeholder="password"/>
+              <input type="text" placeholder="email address"/>
+              <button>create</button>
+              <p class="message">Already registered? <a href="#">Sign In</a></p>
+            </form>
+            <form class="login-form" role="form" action="" method="post">
+                {% csrf_token %}
+              <input type="text" placeholder="username"/>
+              <input type="password" placeholder="password"/>
+              <button type="submit">login</button>
+              <p class="message">Not registered? <a href="#">Create an account</a></p>
+            </form>
+          </div>
+        </div>
+  {% endblock %}
+
 
 
 
