Finished Solution View. No back button.  --Jayan Smart

--- a/ProblemFinder/templates/problemfinder/search.html
+++ b/ProblemFinder/templates/problemfinder/search.html
@@ -212,7 +212,7 @@
     </div>
 </section>
 
-<!-- Footr -->
+<!-- Footer -->
 <footer class="text-center">
     <div class="footer-above">
         <div class="container">
