--- a/ProblemFinder/templates/problemfinder/details.html
+++ b/ProblemFinder/templates/problemfinder/details.html
@@ -1,6 +1,7 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
-{% load static %}
 
 <head>
 
@@ -10,7 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>{{ question.title }}</title>
+    <title>Finding Problems</title>
 
 
     {# Importing CSS #}
@@ -39,6 +40,7 @@
       }
       </script>
 </head>
+
 <body id="page-top" class="index" onLoad="moveWin();">
 
 <!-- Navigation -->
@@ -61,7 +63,7 @@
                     <a href="#page-top"></a>
                 </li>
                 <li class="page-scroll">
-                    <a href="/search/">Login</a>
+                    <a href="/admin/">Login</a>
                 </li>
 
             </ul>
@@ -71,7 +73,96 @@
     <!-- /.container-fluid -->
 </nav>
 
-</body>
 
+
+
+
+<section>
+    <div class="container">
+        <p><br><br><br><br><br></p>
+        <h3 class="searchTitle">Solutions</h3>
+
+        {%  block content %}
+            {% for solution in question.solutions.all %}
+
+                <div class="answerRow">
+
+                    {% if solution.description %}
+                        <h3>Description</h3>
+                        <p>{{ solution.description}}</p>
+                    {% endif %}
+
+                     {% if solution.solution_text %}
+                        <h3>Text</h3>
+                        <p>{{ solution.solution_text}}</p>
+                    {% endif %}
+
+                    {% if solution.solution_URL %}
+                        <h3>Solution URL</h3>
+                        <a>{{ solution.solution_URL }}</a>
+                    {% endif %}
+
+                    {% if solution.solution_PDF %}
+                        <h3>Solution PDF</h3>
+                        <a target="_blank" href="{{ question.question_PDF.url }}">{{ question.question_PDF }} </a>
+                    {% endif %}
+
+                </div>
+                <p><br></p>
+            {% endfor %}
+        {% endblock %}
+    </div>
+</section>
+
+<!-- Footer -->
+<footer class="text-center">
+    <div class="footer-above">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col col-md-4">
+
+                    {#  Add footer content#}
+
+                </div>
+                <div class="footer-col col-md-4">
+
+                    {#  Add footer content#}
+                    <a href="/" class="btn btn-primary btn-lg " role="button" >Hide Results</a>
+
+                </div>
+                <div class="footer-col col-md-4">
+
+                    {#  Add footer content#}
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="footer-below">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h3><span style="color: #18BC9C">Developed by the Djangonauts</span></h3>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+<!-- jQuery -->
+<script src="{% static 'problemfinder/js/jquery.min.js' %}"></script>
+
+<!-- Bootstrap Core JavaScript -->
+<script src="{% static 'problemfinder/js/bootstrap.min.js' %}"></script>
+
+<script src="{% static 'problemfinder/js/custom.js' %}"></script>
+
+
+<!-- Plugin JavaScript -->
+<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+
+</body>
 
 </html>
